manifests/monitoring/alertmanager/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: alertmanager
  name: alertmanager
spec:
  ports:
    - name: alertmanager
      port: 9093
      protocol: TCP
  selector:
    app: alertmanager
